[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://register_ui.gd" id="1"]

[node name="RegisterUI" type="Panel"]
layout_mode = 3
anchors_preset = 14
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 280.0

[node name="NicknameLabel" type="Label" parent="VBoxContainer"]
text = "昵称:"

[node name="NicknameInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "输入昵称"

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
text = "密码:"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "输入密码"
secret = true

[node name="ConfirmPasswordLabel" type="Label" parent="VBoxContainer"]
text = "确认密码:"

[node name="ConfirmPasswordInput" type="LineEdit" parent="VBoxContainer"]
placeholder_text = "再次输入密码"
secret = true

[node name="GenderLabel" type="Label" parent="VBoxContainer"]
text = "性别:"

[node name="GenderOption" type="OptionButton" parent="VBoxContainer"]
items = ["男", "女", "其他"]

[node name="RegisterBtn" type="Button" parent="VBoxContainer"]
text = "注册"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
text = ""
modulate = Color(1, 0, 0)
